if input is disabled set text color to nearly invisible to avoid confusion

--- a/styles/data_retrieval.css
+++ b/styles/data_retrieval.css
@@ -155,6 +155,9 @@ td {
     padding-right: 6px;
     text-align: right;}
 
+input:disabled {
+    color: #ddd;}
+
 /* Color pulseheight columns in table
 */
 #results .weather td:nth-child(5),
